# event-driven-analytics

./: README.md
event-driven-analytics/: pyproject.toml
event-driven-analytics/src/: consumer_aggregate_5_sec.py  docker-compose.yml  producer_raw.py
